<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="1">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="TextView" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="TextView" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="TextView" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="TextView" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="TextView" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:text="TextView" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="#673AB7"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintDimensionRatio="H,8:7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_optimizationLevel="ratio">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2">

            <Button
                android:id="@+id/btn_backspace"
                style="@style/OpButton"
                android:text="@string/backspace"
                app:cornerRadius="50dp"

                />

            <Button
                android:id="@+id/btn_openbr"
                style="@style/OpButton"
                android:text="@string/OpenBr"

                app:cornerRadius="50dp" />

            <Button
                android:id="@+id/btn_closebr"
                style="@style/OpButton"
                android:text="@string/CloseBr"

                app:cornerRadius="50dp" />

            <Button
                android:id="@+id/btn_divide"
                style="@style/OpButton"
                android:text="@string/divide"
                app:cornerRadius="50dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2">

            <Button
                android:id="@+id/btn_seven"
                style="@style/NumButton"
                android:text="@string/seven"
                app:cornerRadius="50dp" />

            <Button
                android:id="@+id/btn_eight"
                style="@style/NumButton"
                android:text="@string/eight"
                app:cornerRadius="50dp" />

            <Button
                android:id="@+id/btn_nine"
                style="@style/NumButton"
                android:text="@string/nine"
                app:cornerRadius="50dp" />

            <Button
                android:id="@+id/btn_multiply"
                style="@style/OpButton"
                android:text="@string/multiply"
                app:cornerRadius="50dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2">

            <Button
                android:id="@+id/btn_four"
                style="@style/NumButton"
                android:text="@string/four"
                app:cornerRadius="50dp" />

            <Button
                android:id="@+id/btn_five"
                style="@style/NumButton"
                android:text="@string/five"
                app:cornerRadius="50dp" />

            <Button
                android:id="@+id/btn_six"
                style="@style/NumButton"
                android:text="@string/six"
                app:cornerRadius="50dp" />

            <Button
                android:id="@+id/btn_minus"
                style="@style/OpButton"
                android:text="@string/minus"
                app:cornerRadius="50dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent">

            <Button
                android:id="@+id/btn_one"
                style="@style/NumButton"
                android:text="@string/one"
                app:cornerRadius="50dp" />

            <Button
                android:id="@+id/btn_two"
                style="@style/NumButton"
                android:text="@string/two"
                app:cornerRadius="50dp" />

            <Button
                android:id="@+id/btn_three"
                style="@style/NumButton"
                android:text="@string/three"
                app:cornerRadius="50dp" />

            <Button
                android:id="@+id/btn_plus"
                style="@style/OpButton"
                android:text="@string/plus"
                app:cornerRadius="50dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2">

            <Button
                android:id="@+id/button"
                style="@style/OpButton"
                android:text="@string/more"
                app:cornerRadius="50dp" />

            <Button
                android:id="@+id/button2"
                style="@style/NumButton"
                android:text="@string/zero"
                app:cornerRadius="50dp" />

            <Button
                android:id="@+id/button3"
                style="@style/OpButton"
                android:text="@string/point"
                app:cornerRadius="50dp" />

            <Button
                android:id="@+id/button4"
                style="@style/OpButton"
                android:text="@string/equal"
                app:cornerRadius="50dp" />
        </LinearLayout>
    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.98" />
</androidx.constraintlayout.widget.ConstraintLayout>